Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Gamifying-presentation by lohtas</title>
+    <title>Gamifying Information Presentation by lohtas</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Gamifying-presentation</h1>
-        <h2>Gamifying Information Presentation</h2>
+        <h1>Gamifying Information Presentation</h1>
+        <h2>Lorena Saria-Huertas</h2>
         <a href="https://github.com/lohtas/gamifying-presentation" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
@@ -28,13 +28,16 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p>Lorena Saria-Huertas ~ Gamifying Information</p>
+          <h1>
+<a id="lorena-saria-huertas--gamifying-information" class="anchor" href="#lorena-saria-huertas--gamifying-information" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lorena Saria-Huertas ~ Gamifying Information</h1>
 
-<p>Information Visualization Skills Training Game</p>
+<h2>
+<a id="information-visualization-skills-training-game" class="anchor" href="#information-visualization-skills-training-game" aria-hidden="true"><span class="octicon octicon-link"></span></a>Information Visualization Skills Training Game</h2>
 
 <p>I propose that any Information Organization - such as public, school, academic, or special libraries - can adopt my game. The learning outcomes of my game are teaching design principles that would enhance the effectiveness of creating data visualization, namely charts and graphs. Depending on the job description, learning effective visualization skills would be beneficial for staff, teachers, librarian assistants, and librarians in conveying complex information to a diverse community of patrons and students with varying language and learning levels. Visualizations can sometimes transcend language barriers and often times are used as a type of universal language (although it would still be limited to cultural norms.) Administrators, directors, managers, and supervisors would therefore need to encourage staff to learn these new skills.</p>
 
-<p>Information Visualization Resources</p>
+<h2>
+<a id="information-visualization-resources" class="anchor" href="#information-visualization-resources" aria-hidden="true"><span class="octicon octicon-link"></span></a>Information Visualization Resources</h2>
 
 <p>Boyd, J. P. (2000 - to be published). The Gospel According to Tufte. In  Engineering 503: Scientific visualization and information architecture course notes (chapter 2). <a href="http://www-personal.umich.edu/%7Ejpboyd/eng403_chap2_tuftegospel.pdf">http://www-personal.umich.edu/~jpboyd/eng403_chap2_tuftegospel.pdf</a>
 This chapter is actually taken from Boyd’s course notes for the Engineering course he teaches at UMich: ENG 503: Scientific Visualization and Information Architecture. This chapter is devoted to explaining Tufte’s design principles for stripping down data visualizations to the most basic elements in order to showcase the data in its simplest form. These design principles go beyond Few’s in that it is not limited to graphs focused on the needs of business. Teaching these principles might be beyond the scope of my game, but I am considering including summarized versions of these principles as either tips or notes in the answers I provide as a way to justify the decisions that went into creating the solutions.</p>
@@ -58,10 +61,13 @@ Edward Tufte is hailed as a pioneer and expert in the field of data visualizatio
 <p>Tufte, E. (2001). The visual display of quantitative information. Cheshire, CT: Graphics Press LLC.
 This book contains the design principles discussed by Boyd and Few plus much more. I hope to further my understanding of techniques used to wrangle the more complex data sets and apply them to my game.</p>
 
-<p>Goals of Institution - Goals of Game play
-In general, a library’s mission is to connect the community they serve to free and open resources in its widest sense. My game falls in line with most libraries’ goals in that it teaches staff to enhance their information conveyance skills. Playing this game would allow staff to serve a diverse community in more effective ways.</p>
+<h2>
+<a id="goals-of-institution--goals-of-game-play" class="anchor" href="#goals-of-institution--goals-of-game-play" aria-hidden="true"><span class="octicon octicon-link"></span></a>Goals of Institution + Goals of Game play</h2>
 
-<p>Annotated Bib of Assessment tool</p>
+<p>In general, a library’s mission is to connect the community they serve to free and open resources in its widest sense. My game falls in line with most libraries’ goals in that it teaches staff to enhance their information conveyance skills. Playing this game would allow staff to serve a diverse community in more effective ways.</p>
+
+<h2>
+<a id="annotated-bibliography-of-assessment-tool" class="anchor" href="#annotated-bibliography-of-assessment-tool" aria-hidden="true"><span class="octicon octicon-link"></span></a>Annotated Bibliography of Assessment tool</h2>
 
 <p>Ak, O. (2012). A game scale to evaluate educational computer games. Procedia. 
 46:2477-2481. <a href="http://www.sciencedirect.com/science/article/pii/S1877042812016357">http://www.sciencedirect.com/science/article/pii/S1877042812016357</a>
@@ -81,26 +87,48 @@ This chapter taught me principles on how to incorporate design elements in my ga
 Teacher Education, 15(1), 87-100. <a href="http://libaccess.sjlibrary.org/login?url=http://search.ebscohost.com/login.aspx?direct=true&amp;db=ofm&amp;AN=507947117&amp;site=ehost-live">http://libaccess.sjlibrary.org/login?url=http://search.ebscohost.com/login.aspx?direct=true&amp;db=ofm&amp;AN=507947117&amp;site=ehost-live</a>
 Kapp referenced this article in chapter 10 of his book and I found his original rubric inspiring for my own. The criteria he supports allow for elements important and purposeful for education games. </p>
 
-<p>Proposed Population that would promote the game: Administration, Directors, Managers, Supervisors
-Proposed population that would play the game: Staff, Teachers, Librarian Assistants, Librarians
-Strategy to attract players:
-Starting with administration or a branch manager (the promoter), a player can share the link to the game with a co-worker as a challenge or friendly invitation to play. I would try to add a gallery feature to the game that will enable players to save their favorite visualizations for other players to view and compare. Since most of the solutions to the puzzle are actually flexible and open-ended, this would allow for comparison between players to show off their creativity and inspire others.</p>
+<h2>
+<a id="game-promoters" class="anchor" href="#game-promoters" aria-hidden="true"><span class="octicon octicon-link"></span></a>Game Promoters</h2>
 
-<p>Polished Game: <a href="http://lohtas.github.io/pathgame/">http://lohtas.github.io/pathgame/</a></p>
+<p>Administration, Directors, Managers, Supervisors</p>
 
-<p>Polished Assessment Tool
-<img src="http://lohtas.github.io/gamifying-presentation/assessmenttool_.png" alt="Polished Assessment Tool">
-Previous Games
-Scavenger Hunt - September 23, 2014
-“Summer Vacation Library Scavenger Hunt” </p>
+<h2>
+<a id="game-players" class="anchor" href="#game-players" aria-hidden="true"><span class="octicon octicon-link"></span></a>Game Players</h2>
 
-<p>Badge Game - October 14, 2014</p>
+<p>Staff, Teachers, Librarian Assistants, Librarians</p>
 
-<p><a href="http://lohtas.github.io/">http://lohtas.github.io/</a>
+<h2>
+<a id="strategy-to-attract-players" class="anchor" href="#strategy-to-attract-players" aria-hidden="true"><span class="octicon octicon-link"></span></a>Strategy to attract players</h2>
+
+<p>Starting with administration or a branch manager (the promoter), a player can share the link to the game with a co-worker as a challenge or friendly invitation to play. I would try to add a gallery feature to the game that will enable players to save their favorite visualizations for other players to view and compare. Since most of the solutions to the puzzle are actually flexible and open-ended, this would allow for comparison between players to show off their creativity and inspire others.</p>
+
+<h2>
+<a id="polished-badges-game-as-path-game-information-visualization-skills-path-game" class="anchor" href="#polished-badges-game-as-path-game-information-visualization-skills-path-game" aria-hidden="true"><span class="octicon octicon-link"></span></a>Polished Badges Game (as Path Game) <a href="http://lohtas.github.io/pathgame/">Information Visualization Skills Path Game</a>
+</h2>
+
+<h2>
+<a id="polished-assessment-tool" class="anchor" href="#polished-assessment-tool" aria-hidden="true"><span class="octicon octicon-link"></span></a>Polished Assessment Tool</h2>
+
+<p><img src="http://lohtas.github.io/gamifying-presentation/assessmenttool_.jpg" alt="Polished Assessment Tool"></p>
+
+<h2>
+<a id="previous-games" class="anchor" href="#previous-games" aria-hidden="true"><span class="octicon octicon-link"></span></a>Previous Games</h2>
+
+<h3>
+<a id="scavenger-hunt---september-23-2014" class="anchor" href="#scavenger-hunt---september-23-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a>Scavenger Hunt - September 23, 2014</h3>
+
+<p>“Summer Vacation Library Scavenger Hunt” </p>
+
+<h3>
+<a id="badge-game---october-14-2014" class="anchor" href="#badge-game---october-14-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a>Badge Game - October 14, 2014</h3>
+
+<p><a href="http://lohtas.github.io/">Original Information Visualization Badges Game</a>
 <img src="http://lohtas.github.io/gamifying-presentation/layered_badges.jpg" alt="All Badges Layered"></p>
 
-<p>Social Game November 4, 2014
-<img src="http://lohtas.github.io/gamifying-presentation/pmd_.jpg" alt="Purple Monkey Dishwasher"></p>
+<h3>
+<a id="social-game---november-4-2014" class="anchor" href="#social-game---november-4-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a>Social Game - November 4, 2014</h3>
+
+<p><img src="http://lohtas.github.io/gamifying-presentation/pmd_.jpg" alt="Purple Monkey Dishwasher"></p>
         </section>
 
         <aside id="sidebar">
