Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h1>
-<a id="lorena-saria-huertas--gamifying-information" class="anchor" href="#lorena-saria-huertas--gamifying-information" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lorena Saria-Huertas ~ Gamifying Information</h1>
-
-<h2>
+          <h2>
 <a id="information-visualization-skills-training-game" class="anchor" href="#information-visualization-skills-training-game" aria-hidden="true"><span class="octicon octicon-link"></span></a>Information Visualization Skills Training Game</h2>
 
 <p>I propose that any Information Organization - such as public, school, academic, or special libraries - can adopt my game. The learning outcomes of my game are teaching design principles that would enhance the effectiveness of creating data visualization, namely charts and graphs. Depending on the job description, learning effective visualization skills would be beneficial for staff, teachers, librarian assistants, and librarians in conveying complex information to a diverse community of patrons and students with varying language and learning levels. Visualizations can sometimes transcend language barriers and often times are used as a type of universal language (although it would still be limited to cultural norms.) Administrators, directors, managers, and supervisors would therefore need to encourage staff to learn these new skills.</p>
@@ -103,13 +100,14 @@ Kapp referenced this article in chapter 10 of his book and I found his original 
 <p>Starting with administration or a branch manager (the promoter), a player can share the link to the game with a co-worker as a challenge or friendly invitation to play. I would try to add a gallery feature to the game that will enable players to save their favorite visualizations for other players to view and compare. Since most of the solutions to the puzzle are actually flexible and open-ended, this would allow for comparison between players to show off their creativity and inspire others.</p>
 
 <h2>
-<a id="polished-badges-game-as-path-game-information-visualization-skills-path-game" class="anchor" href="#polished-badges-game-as-path-game-information-visualization-skills-path-game" aria-hidden="true"><span class="octicon octicon-link"></span></a>Polished Badges Game (as Path Game) <a href="http://lohtas.github.io/pathgame/">Information Visualization Skills Path Game</a>
-</h2>
+<a id="polished-badges-game-as-path-game" class="anchor" href="#polished-badges-game-as-path-game" aria-hidden="true"><span class="octicon octicon-link"></span></a>Polished Badges Game (as Path Game)</h2>
+
+<p><a href="http://lohtas.github.io/pathgame/">Information Visualization Skills Path Game</a></p>
 
 <h2>
 <a id="polished-assessment-tool" class="anchor" href="#polished-assessment-tool" aria-hidden="true"><span class="octicon octicon-link"></span></a>Polished Assessment Tool</h2>
 
-<p><img src="http://lohtas.github.io/gamifying-presentation/assessmenttool_.jpg" alt="Polished Assessment Tool"></p>
+<p><a href="https://drive.google.com/file/d/0B-9cbZpWtCMqcEtCN09JdmNBQlk/view?usp=sharing">Polished Assessment Tool</a></p>
 
 <h2>
 <a id="previous-games" class="anchor" href="#previous-games" aria-hidden="true"><span class="octicon octicon-link"></span></a>Previous Games</h2>
@@ -117,7 +115,7 @@ Kapp referenced this article in chapter 10 of his book and I found his original 
 <h3>
 <a id="scavenger-hunt---september-23-2014" class="anchor" href="#scavenger-hunt---september-23-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a>Scavenger Hunt - September 23, 2014</h3>
 
-<p>“Summer Vacation Library Scavenger Hunt” </p>
+<p><a href="https://drive.google.com/file/d/0B-9cbZpWtCMqSDVSeUJxNTFFT00/view?usp=sharing">Summer Vacation Library Scavenger Hunt Game</a></p>
 
 <h3>
 <a id="badge-game---october-14-2014" class="anchor" href="#badge-game---october-14-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a>Badge Game - October 14, 2014</h3>
@@ -128,7 +126,8 @@ Kapp referenced this article in chapter 10 of his book and I found his original 
 <h3>
 <a id="social-game---november-4-2014" class="anchor" href="#social-game---november-4-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a>Social Game - November 4, 2014</h3>
 
-<p><img src="http://lohtas.github.io/gamifying-presentation/pmd_.jpg" alt="Purple Monkey Dishwasher"></p>
+<p><a href="https://drive.google.com/file/d/0B-9cbZpWtCMqNW9zWWEzUnBBM1U/view?usp=sharing">Purple Monkey Dishwasher Game</a>
+<img src="http://lohtas.github.io/gamifying-presentation/pmd_.jpg" alt="Purple Monkey Dishwasher"></p>
         </section>
 
         <aside id="sidebar">
