Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -142,19 +142,20 @@
 <h3>
 <a id="scavenger-hunt---september-23-2014" class="anchor" href="#scavenger-hunt---september-23-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a>Scavenger Hunt - September 23, 2014</h3>
 
-<p><a href="https://drive.google.com/file/d/0B-9cbZpWtCMqSDVSeUJxNTFFT00/view?usp=sharing">Summer Vacation Library Scavenger Hunt Game</a></p>
+<p><a href="https://drive.google.com/file/d/0B-9cbZpWtCMqSDVSeUJxNTFFT00/view?usp=sharing">Summer Vacation Library Scavenger Hunt Game</a>
+<img src="https://drive.google.com/file/d/0B-9cbZpWtCMqRWZMemltcTh3YkU/view?usp=sharing" alt="Screen Grab of Scavenger Hunt Game"></p>
 
 <h3>
 <a id="badge-game---october-14-2014" class="anchor" href="#badge-game---october-14-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a>Badge Game - October 14, 2014</h3>
 
 <p><a href="http://lohtas.github.io/">Original Information Visualization Badges Game</a>
-<img src="http://lohtas.github.io/gamifying-presentation/layered_badges.jpg" alt="All Badges Layered"></p>
+<img src="https://drive.google.com/file/d/0B-9cbZpWtCMqOENNVVppdnpqTE0/view?usp=sharing" alt="All Badges Layered"></p>
 
 <h3>
 <a id="social-game---november-4-2014" class="anchor" href="#social-game---november-4-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a>Social Game - November 4, 2014</h3>
 
 <p><a href="https://drive.google.com/file/d/0B-9cbZpWtCMqNW9zWWEzUnBBM1U/view?usp=sharing">Purple Monkey Dishwasher Game</a>
-<img src="http://lohtas.github.io/gamifying-presentation/pmd_.jpg" alt="Purple Monkey Dishwasher"></p>
+<img src="https://drive.google.com/file/d/0B-9cbZpWtCMqenNmM190WWlIRWM/view?usp=sharing" alt="Purple Monkey Dishwasher Game"></p>
         </section>
 
         <aside id="sidebar">
