Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 <h2>
 <a id="game-players" class="anchor" href="#game-players" aria-hidden="true"><span class="octicon octicon-link"></span></a>Game Players</h2>
 
-<p>Staff, Teachers, Librarian Assistants, Librarians
-<img src="http://upload.wikimedia.org/wikipedia/commons/0/07/Nevins_Library_First_Librarians.jpg" alt="librarians"></p>
+<p>Staff, Teachers, Librarian Assistants, Librarians</p>
 
 <h2>
 <a id="strategy-to-attract-players" class="anchor" href="#strategy-to-attract-players" aria-hidden="true"><span class="octicon octicon-link"></span></a>Strategy to attract players</h2>
